# pg_stat_ch

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  META.json  Makefile  OTEL_REWRITE_DESIGN.md  README.md  arrow_plan.md  mise.toml  nfpm.yml  pg_stat_ch.control  pg_stat_ch.md  run_tap_tests_local.md  vcpkg-configuration.json  vcpkg.json
.claude/skills/create-new-release/: SKILL.md
.claude/skills/quickstart-validate/: SKILL.md
.depot/workflows/: ci-tap.yml  ci.yml  release.yml
.github/actions/setup-vcpkg/: action.yml
.github/workflows/: ci-tap.yml  ci.yml  deb.yml  pgxn.yml  release.yml
benchmark/: .env.example  Dockerfile  README.md  docker-compose.yml
benchmark/init/: 01-create-extension.sql
benchmark/loadgen/: README.md  pyproject.toml
benchmark/loadgen/src/loadgen/: __init__.py  cli.py  runner.py  workloads.py
benchmark/scripts/: generate_load.sh
cmake/: CompilerWarnings.cmake  FindClickHouseCpp.cmake  FindPostgreSQLServer.cmake  Findabsl.cmake  GitVersion.cmake  OpenSSL.cmake  ThirdPartyArrow.cmake  ThirdPartyClickHouse.cmake  ThirdPartyOTel.cmake
docker/: docker-compose.arrow-route.yml  docker-compose.otel.yml  docker-compose.perf.yml  docker-compose.test.yml  docker-compose.tls.yml  otel-collector-config.yaml  perf-entrypoint.sh  perf.Dockerfile  postgres-ext.Dockerfile
docker/init/: .gitkeep  00-schema.sql  01-query-logs.sql
docker/migrations/: 001_add_labels_column.sql
docker/otel/: collector-config.yaml
docker/otel-routing/: collector-config.yaml
docker/quickstart/: README.md  docker-compose.otel.yml  docker-compose.yml
docker/test-standby/: docker-compose.yml  test-otel.sh  test.sh
docker/tls/: generate-certs.sh  secure.xml
docs/: README.md  clickhouse.md  docker-setup.md  docs.json  hooks.md  testing.md  troubleshooting.md  vercel.json  version-compatibility.md
docs/assets/: styles.css
docs/get-started/: installation.mdx  introduction.mdx  quick-start.mdx
docs/guides/: clickhouse.md  monitoring-queries.mdx  opentelemetry.mdx  testing.md
docs/pages/get-started/: quick-start.mdx
docs/pages/guides/: clickhouse.md  testing.md
docs/pages/reference/: hooks.mdx  troubleshooting.mdx  version-compatibility.md
docs/reference/: configuration.mdx  events-schema.mdx  functions.mdx  hooks.mdx  materialized-views.mdx  troubleshooting.mdx  version-compatibility.md
include/config/: guc.h
include/export/: extra_attr_keys.h
include/pg_stat_ch/: pg_stat_ch.h
migrations/: 001_add_parent_query_id.sql
overlay-ports/cityhash/: portfile.cmake  vcpkg.json
overlay-ports/clickhouse-cpp/: portfile.cmake
ports/cityhash/: portfile.cmake
schema/migrations/: 00000000000001_bootstrap.sql  20260519000001_create_initial_schema.sql
scripts/: bench-otel.sh  bump-version.sh  quickstart-validate-parent-query-id.sh  quickstart.sh  run-perf.sh  run-tests.sh
specs/expected/: overflow_race.out  ring_buffer_boundary.out  ring_buffer_concurrent.out
specs/specs/: overflow_race.spec  ring_buffer_boundary.spec  ring_buffer_concurrent.spec
sql/: pg_stat_ch--0.1--0.3.sql  pg_stat_ch--0.1.0.sql  pg_stat_ch--0.1.sql  pg_stat_ch--0.3--0.4.sql  pg_stat_ch--0.4.sql
src/: pg_stat_ch.c  pg_stat_ch.cc
src/config/: guc.c  guc.cc  guc.h  memory_budget.c  memory_budget.h  memory_view.c
src/export/: arrow_batch.c  arrow_batch.cc  arrow_batch.h  arrow_ipc_emit.c  arrow_ipc_emit.h  clickhouse_c_impl.c  clickhouse_exporter.c  clickhouse_exporter.cc  clickhouse_exporter.h  exporter.h  exporter_interface.h  flatcc_emitter_alloc.c  flatcc_emitter_alloc.h  otel_arrow_exporter.cc  otel_arrow_exporter.h  otel_exporter.c  otel_exporter.cc  otel_exporter.h  otlp_encode.c  otlp_encode.h  sqlcommenter_parse.cc  sqlcommenter_parse.h  stats_exporter.c  stats_exporter.cc  stats_exporter.h
src/hooks/: hooks.c  hooks.cc  hooks.h  normalize.cc  normalize.h  query_normalize.c  query_normalize.cc  query_normalize.h  query_normalize_state.c  query_normalize_state.cc  query_normalize_state.h  string_utils.h
src/queue/: event.h  local_batch.c  local_batch.cc  local_batch.h  psch_dsa.c  psch_dsa.cc  psch_dsa.h  query_intern.c  query_intern.h  ring_entry.h  shmem.c  shmem.cc  shmem.h
src/worker/: bgworker.c  bgworker.cc  bgworker.h
t/: 001_stress_test.pl  002_concurrent_sessions.pl  003_buffer_overflow.pl  004_basic_lifecycle.pl  005_settings.pl  006_query_capture.pl  007_utility_tracking.pl  008_error_capture.pl  009_bgworker.pl  010_clickhouse_export.pl  011_clickhouse_reconnect.pl  012_timing_accuracy.pl  013_buffer_metrics.pl  013_clickhouse_tls.pl  014_cpu_metrics.pl  015_guc_validation.pl  016_boundary_conditions.pl  017_toctou_race.pl  018_producer_consumer.pl  019_reset_atomicity.pl  020_stats_consistency.pl  021_cmd_type_counts.pl  022_drop_database_barrier.pl  022_overflow_deadlock.pl  023_drain_loop.pl  024_otel_export.pl  025_otel_reconnect.pl  026_arrow_dump.pl  027_query_normalization.pl  028_parent_query_id.pl  028_query_normalization_error_leak.pl  029_parent_query_id_arrow.pl  029_query_normalization_warning.pl  030_nested_query_normalization.pl  030_query_labels.pl  031_normalize_cache.pl  031_squashed_in_list_normalization.pl  031_standby_export.pl  032_arrow_export.pl  032_query_intern.pl  (+7 more)
test/regression/: pg_stat_ch.conf
test/regression/expected/: basic.out  buffers.out  client_info.out  cmd_type.out  drop_database_barrier.out  error_capture.out  guc.out  stats.out  upgrade.out  utility.out  version.out
test/regression/sql/: basic.sql  buffers.sql  client_info.sql  cmd_type.sql  drop_database_barrier.sql  error_capture.sql  guc.sql  stats.sql  upgrade.sql  utility.sql  version.sql
test/unit/: arrow_batch_harness.c  arrow_batch_test.cc  arrow_batch_test.sh  arrow_batch_validate.py  hostname_test.cc  otlp_encode_test.c  sqlcommenter_parse_test.cc
triplets/: arm64-linux-pic.cmake  x64-linux-pic.cmake
vcpkg-overlay-ports/clickhouse-cpp/: vcpkg.json
