[project]
name = "loadgen"
version = "0.1.0"
description = "Load generator for pg_stat_ch benchmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "psycopg[binary]>=3.3.2",
    "rich>=14.3.1",
]

[project.scripts]
loadgen = "loadgen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loadgen"]
